--- a/CoordinatorLayoutEx/app/src/main/AndroidManifest.xml
+++ b/CoordinatorLayoutEx/app/src/main/AndroidManifest.xml
@@ -15,6 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".accounts.AccountActivity"
+            android:label="@string/account_name"></activity>
     </application>
 
 </manifest>
